[clang] Add support for p0315r4 "C++20: Lambdas in unevaluated contexts".

--- a/clang/www/cxx_status.html
+++ b/clang/www/cxx_status.html
@@ -976,7 +976,7 @@ ISO C++ 2020 Draft International Standard.
     <tr>
       <td>Lambdas in unevaluated contexts</td>
       <td><a href="https://wg21.link/p0315r4">P0315R4</a></td>
-      <td class="none" align="center">No</td>
+      <td class="full" align="center">Clang 12</td>
     </tr>
     <!-- Jacksonville papers -->
     <tr>
